modify indicators display

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -215,9 +215,14 @@ a:focus {
     &.themed {
         color: #FFF;
         padding-bottom: 20px;
+
+        a {
+            color: #FFF;
+        }
     }
 }
 
+.page-header-dg a.subtitle,
 .page-header-dg .subtitle {
     color: rgba(0, 0, 0, 0.5);
 }
