--- a/app/views/main.html
+++ b/app/views/main.html
@@ -140,7 +140,7 @@
                 <a class="goal-box-container"  style="background: {{ theme.extras.color_primary }}"
                         ng-href="/themes/{{ theme.id }}/{{ theme.slug }}">
                     <div class="goal-box-body">
-                        <h1 class="text-transparent text-center" ng-if="theme.code">
+                        <h1 class="text-center" ng-if="theme.code">
                             <strong>{{ theme.code }}</strong>
                         </h1>
                         <h3 class="text-center"><strong>{{ theme.name }}</strong></h3>
