--- a/app/views/search.html
+++ b/app/views/search.html
@@ -75,7 +75,7 @@
                                             </div>
                                             <div class="text-right">
                                                 <span class="label label-warning" ng-if="
-                                                        (result.object_type == INDICATOR || result.object_type == COMPONENT) &&
+                                                        (result.object_type == COMPONENT) &&
                                                         !result.progress_count" translate>
                                                     No statistics yet
                                                 </span>
