--- a/app/views/component.html
+++ b/app/views/component.html
@@ -31,8 +31,8 @@
 
 <div class="container-wrapper">
 
-    <div class="text-center text-muted" ng-if="loading">
-        <i class="fa fa-spin fa-3x fa-spinner"></i>
+    <div class="text-center text-muted loading-spinner" ng-if="loading">
+        <i class="fa fa-spin fa-3x fa-spinner spinner"></i>
     </div>
 
     <div class="container container-narrow">
