--- a/app/views/plan.html
+++ b/app/views/plan.html
@@ -17,8 +17,8 @@
 
 <div class="container-wrapper">
     <div class="container">
-        <div class="text-center text-muted" ng-if="loading">
-            <i class="fa fa-spin fa-3x fa-spinner"></i>
+        <div class="text-center text-muted loading-spinner" ng-if="loading">
+            <i class="fa fa-spin fa-3x fa-spinner spinner"></i>
         </div>
 
         <div class="text-center">
