--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <div class="col-sm-9 col-no-pad" ng-if="components.results">
+        <div class="col-sm-9 col-no-pad pane-main" ng-if="components.results">
             <div class="container-wrapper">
 
                 <div class="container container-narrow">
