--- a/app/views/target.html
+++ b/app/views/target.html
@@ -81,7 +81,7 @@
                                     <div class="page-header page-header-md box-md-header">
                                         <div class="row">
                                             <div class="col-sm-4 text-center">
-                                                <strong class="text-uppercase" translate>Indictor</strong>
+                                                <strong class="text-uppercase" translate>Indicator</strong>
                                                 <h3 style="color: {{ goal.extras.color_primary }}">{{ indicator.code }}</h3>
                                             </div>
                                             <div class="col-sm-8">
