fix download button links

--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -226,7 +226,7 @@
                                             <i class="fa fa-eye"></i> <span translate>More details</span>
                                         </a>
                                         <a class="btn btn-primary" target="_self"
-                                                ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type={{ areaType }}&format=csv">
+                                                ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type_name={{ areaType }}&format=csv">
                                             <i class="fa fa-download"></i> <span translate>Download data</span>
                                         </a>
                                     </div>
