--- a/app/views/component.html
+++ b/app/views/component.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="panel-footer text-right">
                             <a class="btn btn-primary" target="_self"
-                                    ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type={{ areaType }}&format=csv">
+                                    ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type_name={{ areaType }}&format=csv">
                                 <i class="fa fa-download"></i> <span translate>Download data</span>
                             </a>
                         </div>
