--- a/app/views/component.html
+++ b/app/views/component.html
@@ -51,6 +51,9 @@
                             <strong>{{ chart.title }}</strong>
                         </a>
                     </h2>
+                    <h3 ng-if="component.value_unit" class="subtitle text-center text-info" style="color: {{ color.primary }}">
+                        ({{ component.value_unit }})
+                    </h3>
                 </div>
                 <div class="container-fluid">
                     <nvd3 ng-if="!chart.hasOneValue" options="chart.options"
