--- a/app/views/sector.html
+++ b/app/views/sector.html
@@ -29,7 +29,7 @@
                 <div ng-if="sectors.results" >
                     <div class="page-header">
                         <h4 class="text-center text-uppercase" style="color: {{ goal.extras.color_primary }}" translate>
-                            Some related Rectors
+                            Some related Sectors
                         </h4>
                     </div>
 
